--- a/HelloWorldReact/HelloWorldReact.csproj
+++ b/HelloWorldReact/HelloWorldReact.csproj
@@ -127,8 +127,17 @@
     <Compile Include="Controllers\CTDaoTaoController.cs" />
     <Compile Include="Controllers\MenuController.cs" />
     <Compile Include="Models\DATAINFOBASE.cs" />
+    <Compile Include="Models\DBINFOMENU.cs" />
+    <Compile Include="Models\DEPARTMENT\DEPARTMENT_BUS.cs" />
+    <Compile Include="Models\DEPARTMENT\DEPARTMENT_OBJ.cs" />
+    <Compile Include="Models\LevelEducation\LVEDUCATION_BUS.cs" />
+    <Compile Include="Models\LevelEducation\LVEDUCATION_OBJ.cs" />
     <Compile Include="Models\Menu\MENU_BUS.cs" />
     <Compile Include="Models\Menu\MENU_OBJ.cs" />
+    <Compile Include="Models\SPECIALITY\SPECIALITY_BUS.cs" />
+    <Compile Include="Models\SPECIALITY\SPECIALITY_OBJ.cs" />
+    <Compile Include="Models\TBSUBJECT\TBSUBJECT_BUS.cs" />
+    <Compile Include="Models\TBSUBJECT\TBSUBJECT_OBJ.cs" />
     <Compile Include="Models\User\USER_BUS.cs" />
     <Compile Include="Models\User\USER_OBJ.cs" />
     <Compile Include="Utils\Helper\MD5Encrypt.cs" />
